--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <h3 class="">Header Logo</h3>
+        <h3 class="header-logo">Header Logo</h3>
         <ul class="header-links">
             <li><a href="">header link one</a></li>
             <li><a href="">header link two</a></li>
@@ -17,7 +24,8 @@
     </header>
     <div class="main">
         <h1 class="main-title">This website is awesome</h1>
-        <p class="main-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast.</p>
+        <p class="main-text">This website has some subtext that goes here under the main title. It's a smaller font and
+            the color is lower constrast.</p>
         <button class="sign-button"><a href="">Sign up</a></button>
         <img src="" alt="placeholder">
     </div>
@@ -31,7 +39,8 @@
         </div>
     </div>
     <div class="quote">
-        <p class="quote-text">This is an inspiring quote, or a testimonial from a costumer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="quote-text">This is an inspiring quote, or a testimonial from a costumer. Maybe it's just filling up
+            space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p class="quote-ref">-Thor, God of Thunder</p>
     </div>
     <div class="sign-up">
@@ -43,4 +52,5 @@
         <p class="footer-text">Copyright &copy; The Odin Project 2021</p>
     </footer>
 </body>
+
 </html>
