Style main section

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
         </ul>
     </header>
     <div class="main">
-        <h1 class="main-title">This website is awesome</h1>
-        <p class="main-text">This website has some subtext that goes here under the main title. It's a smaller font and
-            the color is lower constrast.</p>
-        <button class="sign-button"><a href="">Sign up</a></button>
-        <img src="" alt="placeholder">
+        <div class="main-container">
+            <h1 class="main-title">This website is awesome</h1>
+            <p class="main-text">This website has some subtext that goes here under the main title. It's a smaller font
+                and
+                the color is lower constrast.</p>
+            <button class="sign-button"><a class="sign-link" href="">Sign up</a></button>
+        </div>
+        <img class="awesome" src="./images/awesome.jpg" alt="placeholder">
     </div>
     <div class="information">
         <h2 class="info-text">Some random information</h2>
