--- a/index.html
+++ b/index.html
@@ -33,11 +33,23 @@
         <img class="awesome" src="./images/awesome.jpg" alt="placeholder">
     </div>
     <div class="information">
-        <h2 class="info-text">Some random information</h2>
+        <h2 class="info-text">Some random information.</h2>
         <div class="cards-container">
             <div class="card">
-                <img src="" alt="card-img">
-                <p class="card-text"></p>
+                <img class="card-img" src="./images/cards.png" alt="card-img">
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img class="card-img" src="./images/cards.png" alt="card-img">
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img class="card-img" src="./images/cards.png" alt="card-img">
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img class="card-img" src="./images/cards.png" alt="card-img">
+                <p class="card-text">this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
