Style sign up section

--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
         <p class="quote-ref">-Thor, God of Thunder</p>
     </div>
     <div class="sign-up">
-        <h3 class="sign-up-title">Call to action! It's time!</h3>
-        <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
-        <button class="sign-button-alt"><a href="">Sign up</a></button>
+        <div class="sign-up-container">
+            <div class="sign-up-left">
+                <h3 class="sign-up-title">Call to action! It's time!</h3>
+                <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="sign-button-alt"><a href="">Sign up</a></button>
+        </div>
     </div>
     <footer>
         <p class="footer-text">Copyright &copy; The Odin Project 2021</p>
