Remove button from links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="main-text">This website has some subtext that goes here under the main title. It's a smaller font
                 and
                 the color is lower constrast.</p>
-            <button class="sign-button"><a class="sign-link" href="">Sign up</a></button>
+            <a class="sign-button" href="">Sign up</a>
         </div>
         <img class="awesome" src="./images/awesome.jpg" alt="placeholder">
     </div>
@@ -64,7 +64,7 @@
                 <h3 class="sign-up-title">Call to action! It's time!</h3>
                 <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button class="sign-button-alt"><a href="">Sign up</a></button>
+            <a class="sign-button-alt" href="">Sign up</a>
         </div>
     </div>
     <footer>
